--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/revision-toolbar.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/revision-toolbar.html.twig
@@ -185,7 +185,7 @@
 				</div>
 			  {% endif %}
 
-			{% if is_super() and environmentsRevision.environments|length > 0 %}
+			{% if emsco_is_super() and environmentsRevision.environments|length > 0 %}
 				<div class="btn-group">
 					<button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
 						<span class="sr-only">{{ 'views.elements.revision-toolbar-html.other-environment-actions'|trans }}</span>
