doc:  `md5` deprecated and must be replaced by `ems_md5`  `luma` deprecated and must be replaced by `ems_luma`  `contrastratio` deprecated and must be replaced by `ems_contrast_ratio`  New ems_color twif filter

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/user-image.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/user-image.html.twig
@@ -1,7 +1,7 @@
 {%- trans_default_domain 'elements' -%}
 
 {% if app.user %}
-    <img src="{{ asset('images/anonymous.gif', 'emscore') }}" data-original="https://www.gravatar.com/avatar/{{ app.user.email|lower|md5 }}?s=256" class="{{ class }} lazy" alt="{{ app.user.displayName }}" width="128" height="128">
+    <img src="{{ asset('images/anonymous.gif', 'emscore') }}" data-original="https://www.gravatar.com/avatar/{{ app.user.email|lower|ems_md5 }}?s=256" class="{{ class }} lazy" alt="{{ app.user.displayName }}" width="128" height="128">
 {% else %}
     <img src="{{ asset('images/anonymous.gif', 'emscore') }}" class="{{ class }}" alt="{{ 'elements.user-image.anonymous'|trans }}" width="128" height="128">
 {% endif %}
