--- a/EMS/core-bundle/src/Resources/views/view/custom/calendar_search.json.twig
+++ b/EMS/core-bundle/src/Resources/views/view/custom/calendar_search.json.twig
@@ -8,15 +8,15 @@
         	{% if contentType.colorField and attribute(item._source, contentType.colorField) is defined %}
 	        	"backgroundColor": {{ attribute(item._source, contentType.colorField)|json_encode|raw }},
 	        	"borderColor": {{ attribute(item._source, contentType.colorField)|json_encode|raw }},
-	        	"textColor": "{%  if attribute(item._source, contentType.colorField)|contrastratio('#000000') > attribute(item._source, contentType.colorField)|contrastratio('#ffffff') %}#000000{% else %}#ffffff{% endif %}",
+	        	"textColor": "{%  if attribute(item._source, contentType.colorField)|ems_contrast_ratio('#000000') > attribute(item._source, contentType.colorField)|ems_contrast_ratio('#ffffff') %}#000000{% else %}#ffffff{% endif %}",
         	{% endif %}
         		{% if field.mappingOptions.nested %}
         			{% set item = attribute(item._source, field.name) %}
         		{% else %}
         			{% set item = item._source %}
-        		{% endif %}   	
+        		{% endif %}
 			"start": {{ attribute(item, field.mappingOptions.fromDateMachineName)|json_encode|raw }},
 			"end": {{ attribute(item, field.mappingOptions.toDateMachineName)|json_encode|raw }},
-			"allDay": {% if field.displayOptions.timePicker %}false{% else %}true{% endif %} 
+			"allDay": {% if field.displayOptions.timePicker %}false{% else %}true{% endif %}
 }{% if not loop.last %}, {% endif %}{% endfor %}],
 {% endblock %}
